--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation'com.google.zxing:core:3.2.1'
+    implementation'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
 
 }
