--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation'com.google.zxing:core:3.2.1'
     implementation'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation "com.stripe:stripe-java:17.16.0"
 
 
 }
