--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".CreateEventActivity" />
         <activity android:name=".TicketSelectionActivity" />
         <activity android:name=".TicketOneActivity" />
+        <activity android:name=".MyAdapter" />
 
 
     </application>
